[package]
name = "vulkaniatest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
nalgebra-glm = "0.10"
png = "0.16"
tobj = "2"
vulkanalia = { version = "0.15.0", features = ["libloading", "window"] }
winit = "0.26.1"